--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-native-websocket": "^2.0.15",
+    "vue-native-websocket-vue3": "^3.1.4",
     "vue-router": "^4.0.0-0",
+    "vuetify": "^2.5.8",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
