--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,24 +6,14 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_DB: unidb
+      POSTGRES_DB: chat
       POSTGRES_PASSWORD: password
-  back:
-    build: ./back
-    restart: always
-    ports:
-      - 3000:3000
-  front:
-    build: ./front
-    restart: always
-    ports:
-      - 5000:5000
-  proxy:
-    build: ./proxy-server
-    restart: always
-    ports:
-      - 4000:4000
-    environment:
-      - BACK_URL=http://back:3000
-      - FRONT_URL=http://front:5000
+  # proxy:
+  #   build: ./proxy-server
+  #   restart: always
+  #   ports:
+  #     - 4000:4000
+  #   environment:
+  #     - BACK_URL=http://back:3000
+  #     - FRONT_URL=http://front:5000
 
